--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,12 +1,11 @@
-<!-- templates/number.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Template</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Number: {{ number }}</h1>
+    <H1></H1>
 </body>
 </html>
