added {} to else in html

--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -6,8 +6,8 @@
     <BODY>
         {% if n is divisible by 2 %}
         <H1>Number: {{ n }} is even</H1>
-        % else %
+        {% else %}
         <H1>Number: {{ n }} is odd</H1>
-        % endif %
+        {% endif %}
     </BODY>
 </HTML>
