added H1 instead of h1

--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        <H1>Number: {{ n }}</H1>
-    </BODY>
-</HTML>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Number Odd or Even</title>
+</head>
+<body>
+    <H1>{{ n }} is {{ evenness }}</H1>
+    <p>This number is {{ evenness }}.</p>
+</body>
+</html>
