--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -5,7 +5,7 @@
     <title>Number Odd or Even</title>
 </head>
 <body>
-    <h1>{{ n }} is {{ evenness }}</h1>
+    <H1>{{ n }} is {{ evenness }}</H1>
     <p>This number is {{ evenness }}.</p>
 </body>
 </html>
